--- a/SQL_introduction/README.me
+++ b/SQL_introduction/README.me
@@ -1,1 +1,6 @@
 INTRODUCTION TO SQL
+
+Welcome to the MySQL monitor.  
+Commands end with ; or \g.
+Your MySQL connection id is 12
+Server version: 8.1.0 MySQL Community Server (GPL)
